--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -115,6 +115,10 @@ body {
   box-shadow: none !important;
 }
 
+.background-none {
+  background: none !important;
+}
+
 /* ---footer--- */
 
 .footer-layout {
