--- a/profapp/templates/portal/plans_edit.html
+++ b/profapp/templates/portal/plans_edit.html
@@ -85,83 +85,10 @@
 
             angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('portal_plans');
 
-
-            {#            $scope.url_after_save = {{ raw_url_for('company.profile')|safe }};#}
-
-            {#            $scope.changeDescription = function (d) {#}
-            {#                var modalInstance = $uibModal.open({#}
-            {#                    templateUrl: 'portal_edit_division_decription.html',#}
-            {#                    controller: 'PortalDivisionDescriptionDialogControler',#}
-            {#                    resolve: resolveDictForAngularController({#}
-            {#                        seo_data: {#}
-            {#                            'description': d.html_description,#}
-            {#                            'title': d.html_title,#}
-            {#                            'keywords': d.html_keywords#}
-            {#                        }#}
-            {#                    })#}
-            {#                });#}
-            {#                modalInstance.result.then(function (new_seo_data) {#}
-            {#                    d.html_title = new_seo_data['title'];#}
-            {#                    d.html_keywords = new_seo_data['keywords'];#}
-            {#                    d.html_description = new_seo_data['description'];#}
-            {#                });#}
-            {#            };#}
-
-            {#            $scope.openForFavIcoFile = function (set_none) {#}
-            {#                $('.favico-select-file-upload').click();#}
-            {#            };#}
-
-
-            {#            $scope.selectFiveIcoFile = function () {#}
-            {#                var the_file = (event.target.files && event.target.files.length) ? event.target.files[0] : false;#}
-            {#                $(this).val('');#}
-            {#                if (the_file) {#}
-            {#                    var fr = new FileReader();#}
-            {#                    fr.onload = function (e) {#}
-            {#                        $scope.data.portal['favicon'] = {#}
-            {#                            'mime': the_file.type,#}
-            {#                            'name': the_file.name,#}
-            {#                            'content': fr.result#}
-            {#                        }#}
-            {#                    }#}
-            {##}
-            {#                    fr.onerror = function (e) {#}
-            {#                        add_message('File loading error', 'warning');#}
-            {#                    };#}
-            {#                    fr.readAsDataURL(the_file);#}
-            {#                }#}
-            {#            };#}
-
-            {#            $scope.afterSave = function (resp) {#}
-            {#                if (!$scope.portal_id) {#}
-            {#                    window.location.href = $scope.url_after_save({company_id: resp['portal']['own_company']['id']})#}
-            {#                }#}
-            {#                else {#}
-            {#                    $scope.data = $scope.amidLoad(resp);#}
-            {#                }#}
-            {#            };#}
-            {##}
-            {##}
-            {#            $scope.amidLoad = function (resp) {#}
-            {#                if (!$scope.portal_id) {#}
-            {#                    resp['portal']['divisions'] =#}
-            {#                            _.map(['index', 'news', 'events', 'catalog', 'company_subportal'], function (t) {#}
-            {#                                return {#}
-            {#                                    'id': randomHash(), 'portal_division_type_id': t,#}
-            {#                                    'html_description': '',#}
-            {#                                    'html_keywords': '',#}
-            {#                                    'html_title': '',#}
-            {#                                    'name': $scope._('new portal division ' + t)#}
-            {#                                };#}
-            {#                            });#}
-            {##}
-            {#                    resp['portal']['divisions'][1]['publication_count'] = 0;#}
-            {#                    resp['portal']['divisions'][2]['publication_count'] = 0;#}
-            {#                    resp['portal']['divisions'][resp['portal']['divisions'].length - 1]['settings'] =#}
-            {#                    {'company_id': resp['portal']['own_company']['id']};#}
-            {#                }#}
-            {#                return resp;#}
-            {#            };#}
+            {#            TODO: OZ by OZ: set this functionality by default (maybe)#}
+            $scope.afterSave = function (resp) {
+                $scope.data = resp;
+            };
 
             $scope.addPlan = function () {
                 $scope.data.plans.push({
@@ -201,17 +128,11 @@
 
             $scope.sortableOptions = {
                 stop: function (e, ui) {
-                    if ($scope.data_validation.errors && $scope.data_validation.errors.remove_division) {
-                        $scope.data_validation.errors.remove_division = []
+                    if ($scope.data_validation.errors && $scope.data_validation.errors.remove_plan) {
+                        $scope.data_validation.errors.remove_plan = []
                     }
-                    if ($scope.data_validation.warnings && $scope.data_validation.warnings.remove_division) {
-                        $scope.data_validation.warnings.remove_division = []
-                    }
-                    if ($scope.data_validation.errors && $scope.data_validation.errors.company_subportal) {
-                        $scope.data_validation.errors.company_subportal = []
-                    }
-                    if ($scope.data_validation.warnings && $scope.data_validation.warnings.company_subportal) {
-                        $scope.data_validation.warnings.company_subportal = []
+                    if ($scope.data_validation.warnings && $scope.data_validation.warnings.remove_plan) {
+                        $scope.data_validation.warnings.remove_plan = []
                     }
                 },
                 'tolerance': 'pointer',
@@ -266,7 +187,6 @@
                     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 p025em">
                         <button class="pull-right btn btn-success form-control" type="button"
                                 popover-placement="left"
-                                pr-validation-answer="data_validation:add_division"
                                 ng-click="addPlan()"><i class="fa fa-plus"></i> {{ ::_('add plan') }}
                         </button>
                     </div>
@@ -281,26 +201,26 @@
                                 <span style="cursor: row-resize"
                                       class="fa fa-arrows-v form-control w2em border-none di"></span>
                                 <input class="form-control w10em di"
-                                       ng-disabled="plan['remove_this_existing_division']"
-                                       pr-validation-answer="data_validation:plan[plan.id].name"
+                                       ng-disabled="plan['remove_this_existing_plan']"
+                                       pr-validation-answer="data_validation:plans[plan.id].name"
                                        placeholder="{{ _('Plan name placeholder') }}"
                                        ng-model="plan.name">
                             </div>
 
                             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 p025em">
                                 <input class="form-control w3em di"
-                                       ng-disabled="plan['remove_this_existing_division']"
-                                       pr-validation-answer="data_validation:plan[plan.id].publication_count_open"
+                                       ng-disabled="plan['remove_this_existing_plan']"
+                                       pr-validation-answer="data_validation:plans[plan.id].publication_count_open"
                                        placeholder="{{ _('Open') }}"
                                        ng-model="plan.publication_count_open">
                                 <input class="form-control w3em di"
-                                       ng-disabled="plan['remove_this_existing_division']"
-                                       pr-validation-answer="data_validation:plan[plan.id].publication_count_registered"
+                                       ng-disabled="plan['remove_this_existing_plan']"
+                                       pr-validation-answer="data_validation:plans[plan.id].publication_count_registered"
                                        placeholder="{{ _('Registered') }}"
                                        ng-model="plan.publication_count_registered">
                                 <input class="form-control w3em di"
-                                       ng-disabled="plan['remove_this_existing_division']"
-                                       pr-validation-answer="data_validation:plan[plan.id].publication_count_payed"
+                                       ng-disabled="plan['remove_this_existing_plan']"
+                                       pr-validation-answer="data_validation:plans[plan.id].publication_count_payed"
                                        placeholder="{{ _('Payed') }}"
                                        ng-model="plan.publication_count_payed">
                             </div>
@@ -308,14 +228,14 @@
                             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 p025em">
 
                                 <input class="form-control w3em di"
-                                       ng-disabled="plan['remove_this_existing_division']"
-                                       pr-validation-answer="data_validation:plan[plan.id].duration"
+                                       ng-disabled="plan['remove_this_existing_plan']"
+                                       pr-validation-answer="data_validation:plans[plan.id].duration"
                                        placeholder="{{ _('Plan duration') }}"
                                        ng-model="plan.duration">
 
 
                                 <select
-                                        ng-disabled="plan['remove_this_existing_division']"
+                                        ng-disabled="plan['remove_this_existing_plan']"
                                         popover-trigger="none"
                                         class="form-control w7em di"
                                         ng-model="plan.duration_unit"
@@ -325,13 +245,13 @@
 
                             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 p025em">
                                 <input class="form-control w3em di"
-                                       ng-disabled="plan['remove_this_existing_division']"
-                                       pr-validation-answer="data_validation:plan[plan.id].price"
+                                       ng-disabled="plan['remove_this_existing_plan']"
+                                       pr-validation-answer="data_validation:plans[plan.id].price"
                                        placeholder="{{ _('Set price (0 for free)') }}"
                                        ng-model="plan.price"/>
 
                                 <select
-                                        ng-disabled="plan['remove_this_existing_division']"
+                                        ng-disabled="plan['remove_this_existing_plan']"
                                         popover-trigger="none"
                                         class="form-control w7em di"
                                         ng-model="plan.currency_id"
@@ -343,24 +263,26 @@
 
                         </div>
 
-
                         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 p025em">
-                            <button ng-click="togglePlanStatus($index)"
-                                    pr-validation-answer="data_validation:plan[plan.id].status"
-                                    class="pull-right btn btn-warning form-control"><i
+
+                            <label ng-click="plan['remove_this_existing_plan'] || togglePlanStatus($index)"
+                                   ng-disabled="plan['remove_this_existing_plan']"
+                                   pr-validation-answer="data_validation:plans[plan.id].status"
+                                   class="form-control border-none background-none link"><i
                                     ng-class="{'fa-toggle-on': plan['status'] === 'ACTIVE','fa-toggle-off': plan['status'] !== 'ACTIVE'}"
                                     class="fa"></i>
                                 {{ _('plan is ' + plan['status']) }}
-                            </button>
+                            </label>
                         </div>
+
 
                         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 p025em">
                             <button ng-click="removePlan($index)"
-                                    pr-validation-answer="data_validation:plan[plan.id].actions"
+                                    pr-validation-answer="data_validation:plans[plan.id].actions"
                                     class="pull-right btn btn-warning form-control"><i
                                     ng-class="{'fa-minus': !plan['remove_this_existing_plan'],'fa-undo': plan['remove_this_existing_plan']}"
                                     class="fa"></i>
-                                {{ _(plan['remove_this_existing_division']?'undo remove':'remove plan') }}
+                                {{ _(plan['remove_this_existing_plan']?'undo remove':'remove plan') }}
                             </button>
                         </div>
 
